frontend/src/assets/css/LandingPage.css
.top {
    color: var(--white);
    padding: 1.5rem;
    background-image: url("../img/banner.png");
    background-position: center center;
    background-size: cover;
}

.top header {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.banner {
    margin-top: 5rem;
    font-size: var(--body_mobile);
    text-align: center;
}

.logo {
    width: 140px;
}

nav ul li {
    display: inline-block;
    padding: 0.5rem;
}

nav ul li a{
    font-weight: normal;
    text-decoration: none;
    color: var(--white);
}

.title {
    font-size: var(--title_mobile);
}

.subtitle {
    font-size: var(--body_mobile);
}

.title, .subtitle {
    margin-bottom: 1rem;
    text-align: center;
}

.section-services {
    padding: 2rem 1rem;
    text-align: center;
}

.serviceImage {
    width: 180px;
    border-radius: 10px;
    height: 100px;
    object-fit: cover;
    box-shadow: var(--box_shadow);
    margin-bottom: 0.5rem;
}

.serviceName {
    font-size: 14px;
    margin-bottom: 0.5rem;
    font-weight: bold;
}

.services {
    margin: 1rem;
    display: flex;
    gap: 20px;
    justify-content: center;
    align-items: center;
}

.categoria {
    border-radius: 10px;
    width: fit-content;
    padding: 0.5rem;
    text-align: center;
    margin: auto;
    font-weight: bold;
    font-size: 12px;
}

.estética {
    background-color: var(--category_box_estetica);
    color: var(--category_text_estetica);
}

.unhas {
    background-color: var(--category_box_feet);
    color: var(--category_text_feet);
}

.section-cta {
    padding: 1.5rem;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 15px;
}

.cta-image {
    background-image: url("https://i.imgur.com/NxKlb07.png");
    height: 250px;
    background-size: cover;
    background-position: center center;
    display: flex;
    flex-direction: column-reverse;
    padding: 0.5rem;
    border-radius: 10px;
    box-shadow: var(--box_shadow);
}

.section-cta .title {
    text-align: left!important;
}

